improvements in layout and tabs

--- a/portocred/src/app/app.component.html
+++ b/portocred/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-main-nav>
-  <app-main-container>
-    saddsasdaasdn
-  </app-main-container>
+  <app-main-tabs></app-main-tabs>
 </app-main-nav>
