--- a/portocred/src/app/main-tabs/main-tabs.component.html
+++ b/portocred/src/app/main-tabs/main-tabs.component.html
@@ -1,27 +1,18 @@
 <mat-tab-group mat-stretch-tabs class="example-stretched-tabs" color="primary" backgroundColor="primary">
   <mat-tab label="PORTOCOINS">
     <app-main-container>
-        <mat-card>
-          Olá André,<br><br>
-
-          <b>Você possui<br><span style="font-size:26px">286 PC</span></b>
-        </mat-card>
-        <br>
-        <mat-card>
-            Olá André,<br><br>
-  
-            <b>Você possui<br><span style="font-size:26px">286 PC</span></b>
-          </mat-card>
+        <app-tab-portocoins></app-tab-portocoins>
     </app-main-container>
   </mat-tab>
   <mat-tab label="FATURAS">
     <app-main-container>
-        Content 2
+        <app-tab-faturas></app-tab-faturas>
+        
     </app-main-container>
   </mat-tab>
   <mat-tab label="OFERTAS">
     <app-main-container>
-        Content 3
+        <app-tab-ofertas></app-tab-ofertas>
     </app-main-container>
   </mat-tab>
 </mat-tab-group>
