--- a/portocred/src/app/main-tabs/main-tabs.component.html
+++ b/portocred/src/app/main-tabs/main-tabs.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group mat-stretch-tabs class="example-stretched-tabs" color="primary" backgroundColor="primary">
+<mat-tab-group mat-stretch-tabs class="example-stretched-tabs">
   <mat-tab label="PORTOCOINS">
     <app-main-container>
         <app-tab-portocoins></app-tab-portocoins>
