--- a/portocred/src/app/tab-portocoins/tab-portocoins.component.html
+++ b/portocred/src/app/tab-portocoins/tab-portocoins.component.html
@@ -1,11 +1,14 @@
+<div class="att">
+  Atualizado em 19/11/2018 às 12:53
+</div>
 <mat-card>
-  Olá André,<br><br>
-
-  <b>Você possui<br><span style="font-size:26px">286 PC</span></b>
+  <span class="nome">Olá <strong>Cássio Trindade</strong>, você possui</span><br><br>
+  <div class="coins">
+    <img src="../../assets/img/coins.png" alt="" style="margin-right:15px">
+    <span class="verde" style="font-size:48px"><strong>1.420 PCs</strong></span>
+  </div>
 </mat-card>
 <br>
-<mat-card>
-  Olá André,<br><br>
-
-  <b>Você possui<br><span style="font-size:26px">286 PC</span></b>
-</mat-card>
+<mat-card>Compartilhe portocoins com seus amigos <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span></mat-card>
+<br>
+<mat-card>Peça portocoins aos seus amigos <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span></mat-card>
