--- a/portocred/src/app/main-nav/main-nav.component.html
+++ b/portocred/src/app/main-nav/main-nav.component.html
@@ -1,10 +1,10 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <img src="../../assets/img/logo-branco.png" alt="Portocred">
+      <img src="../../assets/img/logo-azul.png" alt="Portocred">
       <!-- <span>Portocred</span> -->
       <span class="spacer"></span>
-      <a href="#"><span class="mdc-fab__icon material-icons">search</span></a>
+      <a href="#"><span class="mdc-fab__icon material-icons">update</span></a>
       <a href="#"><span class="mdc-fab__icon material-icons">more_vert</span></a>
     </mat-toolbar>
     <ng-content class="content"></ng-content>
