--- a/portocred/src/app/tab-ofertas/tab-ofertas.component.html
+++ b/portocred/src/app/tab-ofertas/tab-ofertas.component.html
@@ -1,3 +1,50 @@
-<p>
-  tab-ofertas works!
-</p>
+<div class="fix">
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>Americanas</mat-card-title>
+  </mat-card-header>
+  <img mat-card-image src="../../assets/img/americanas.png" alt="Magazine Luiza">
+  <mat-card-content>
+    <p>
+      Utilize seus portocoins para obter até <strong>25%</strong> de desconto em produtos nas lojas Americanas
+    </p>
+  </mat-card-content>
+  <mat-card-actions style="text-align:right">
+    <button mat-button>CONFERIR</button>
+  </mat-card-actions>
+</mat-card>
+
+<br> <br>
+
+<mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Magazine Luiza</mat-card-title>
+    </mat-card-header>
+    <img mat-card-image src="../../assets/img/luiza.png" alt="Magazine Luiza">
+    <mat-card-content>
+      <p>
+        Utilize seus portocoins para obter até <strong>30%</strong> de desconto em produtos nas lojas Magazine Luiza
+      </p>
+    </mat-card-content>
+    <mat-card-actions style="text-align:right">
+      <button mat-button>CONFERIR</button>
+    </mat-card-actions>
+  </mat-card>
+
+  <br> <br>
+
+<mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Paquetá Esportes</mat-card-title>
+    </mat-card-header>
+    <img mat-card-image src="../../assets/img/paqueta.jpg" alt="Paquetá Esportes">
+    <mat-card-content>
+      <p>
+        Utilize seus portocoins para obter até <strong>15%</strong> de desconto em produtos nas lojas Paquetá Esportes
+      </p>
+    </mat-card-content>
+    <mat-card-actions style="text-align:right">
+      <button mat-button>CONFERIR</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
