--- a/portocred/src/app/tab-portocoins/tab-portocoins.component.html
+++ b/portocred/src/app/tab-portocoins/tab-portocoins.component.html
@@ -9,6 +9,8 @@
   </div>
 </mat-card>
 <br>
+<mat-card>Aproveite ofertas com seus portocoins <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span></mat-card>
+<br>
 <mat-card>Compartilhe portocoins com seus amigos <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span></mat-card>
 <br>
 <mat-card>Peça portocoins aos seus amigos <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span></mat-card>
