--- a/portocred/src/app/main-nav/main-nav.component.css
+++ b/portocred/src/app/main-nav/main-nav.component.css
@@ -1,6 +1,7 @@
 .mat-toolbar.mat-primary {
   background: #ffffff;
   color: rgb(0,45,114);
+  z-index: 9999;
 }
 
 .mdc-fab__icon.material-icons {
@@ -50,5 +51,5 @@ img {
 }
 
 .mat-drawer-content.mat-sidenav-content {
-  background-color: rgb(0,45,114) !important;
+  background-color: rgb(68,80,126) !important;
 }
