--- a/portocred/src/app/main-tabs/main-tabs.component.css
+++ b/portocred/src/app/main-tabs/main-tabs.component.css
@@ -1,12 +1,3 @@
-.mat-tab-label.mat-tab-label-active {
-    min-width: 25px !important;
-    padding: 5px;
-    background-color: transparent;
-    color: red;
-    font-weight: 700;
-}
-
-/* Styles for the ink bar */
 .mat-ink-bar {
-    background-color: green;
+    background-color: rgb(132,189,0);
 }
