--- a/portocred/src/app/tab-portocoins/tab-portocoins.component.html
+++ b/portocred/src/app/tab-portocoins/tab-portocoins.component.html
@@ -2,7 +2,7 @@
   Atualizado em 19/11/2018 às 12:53
 </div>
 <mat-card>
-  <span class="nome">Olá <strong>Cássio Trindade</strong>, você possui</span><br><br>
+  <span class="nome">Olá <strong>{{ nomeCliente }}</strong>, você possui</span><br><br>
   <div class="coins">
     <img src="../../assets/img/coins.png" alt="" style="margin-right:15px">
     <span class="verde" style="font-size:48px"><strong>1.420 PCs</strong></span>
