--- a/portocred/src/app/tab-faturas/tab-faturas.component.html
+++ b/portocred/src/app/tab-faturas/tab-faturas.component.html
@@ -1,1 +1,76 @@
-<app-checkbox></app-checkbox>
+<mat-card>
+    <mat-list>
+        <mat-list-item>
+            <mat-icon mat-list-icon>check_circle</mat-icon>
+            <h4 mat-line>12/12 - DEZEMBRO 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+        <mat-list-item>
+            <mat-icon mat-list-icon style="color:green;">check_circle</mat-icon>
+            <h4 mat-line>11/12 - NOVEMBRO 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+        <mat-list-item>
+            <mat-icon mat-list-icon style="color:green;">check_circle</mat-icon>
+            <h4 mat-line>10/12 - OUTUBRO 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+        <mat-list-item>
+            <mat-icon mat-list-icon style="color:green;">check_circle</mat-icon>
+            <h4 mat-line>09/12 - SETEMBRO 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+        <mat-list-item>
+            <mat-icon mat-list-icon style="color:green;">check_circle</mat-icon>
+            <h4 mat-line>08/12 - AGOSTO 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+        <mat-list-item>
+            <mat-icon mat-list-icon style="color:green;">check_circle</mat-icon>
+            <h4 mat-line>07/12 - JULHO 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+        <mat-list-item>
+            <mat-icon mat-list-icon style="color:green;">check_circle</mat-icon>
+            <h4 mat-line>06/12 - JUNHO 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+        <mat-list-item>
+            <mat-icon mat-list-icon style="color:green;">check_circle</mat-icon>
+            <h4 mat-line>05/12 - MAIO 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+        <mat-list-item>
+            <mat-icon mat-list-icon style="color:green;">check_circle</mat-icon>
+            <h4 mat-line>04/12 - ABRIL 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+        <mat-list-item>
+            <mat-icon mat-list-icon style="color:green;">check_circle</mat-icon>
+            <h4 mat-line>03/12 - MARÇO 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+        <mat-list-item>
+            <mat-icon mat-list-icon style="color:green;">check_circle</mat-icon>
+            <h4 mat-line>02/12 - FEVEREIRO 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+        <mat-list-item>
+            <mat-icon mat-list-icon style="color:green;">check_circle</mat-icon>
+            <h4 mat-line>01/12 - JANEIRO 2018</h4>
+            <p mat-line>R$ 240,00</p>
+            <span style="float:right" class="mdc-fab__icon material-icons">chevron_right</span>
+        </mat-list-item>
+    </mat-list>
+</mat-card>
